--- a/my.cnf
+++ b/my.cnf
@@ -4,3 +4,7 @@ console=1
 general_log=1
 general_log_file=/dev/stdout
 log_error=/dev/stderr
+
+[mariadb]
+aria_force_start_after_recovery_failures=1
+aria_group_commit=hard
